sort.basic.insertion.AlgInsertionSort.scala.error
Compilation error:
AlgInsertionSort:8: error: not found: value depuis
        copie(depuis i-j, vers i-j+1)
              ^AlgInsertionSort:8: error: not found: value vers
        copie(depuis i-j, vers i-j+1)
                          ^