sort.basic.insertion.AlgInsertionSort.scala.code
def insertionSort() {
  var v = 0
  for (i<- 1 to getNombreValeurs()-1){
    v=getValeur(i)
    for (j<-1 to i){
    	while(v>getValeur(i-1)){
      	copie(depuis i-j, vers i-j+1)
    	}
    }
  }
}